--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,6 @@
 {
-  "welcome": "Welcome to our website",
-  "description": "This is a simple internationalized React app.",
+  "title": "Welcome to our website",
+  "text": "This is a simple internationalized React app.",
   "home": "Home",
   "about": "About",
   "contact": "Contact"
