--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -1,6 +1,6 @@
 {
-  "welcome": "Bem-vindo ao nosso site",
-  "description": "Este é um aplicativo React simples internacionalizado.",
+  "title": "Bem-vindo ao nosso site",
+  "text": "Este é um aplicativo React simples internacionalizado.",
   "home": "Início",
   "about": "Sobre",
   "contact": "Contato"
