--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -1,7 +1,12 @@
 {
-  "title": "Bem-vindo ao nosso site",
-  "text": "Este é um aplicativo React simples internacionalizado.",
+  
   "home": "Início",
   "about": "Sobre",
-  "contact": "Contato"
+  "contact": "Contato",
+  "titleHome": "Vanderlei Neto",
+  "subTitleHome": "Desenvolvedor Web",
+  "resume": "https://drive.google.com/file/d/1",
+  "textHome": "Sou um desenvolvedor  Front-End, desenvolvo sites para empresas, professores, e pesquisadores, transformando ideias em soluções digitais que captam a atenção e entregam valor.",
+  "cv": "https://github.com/josevanderleineto.png"
+
 }
