--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,7 +7,7 @@
   "subTitleHome": "Web Developer",
   "resume": "https://drive.google.com/file/d/1",
   "textHome": "I'm a Front-End developer, creating websites for businesses, teachers, and researchers, transforming ideas into digital solutions that capture attention and deliver value.",
-  "cv": "https://github.com/josevanderleineto.png"
+  "cv": "Resume"
 
 
 }
