--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -7,6 +7,6 @@
   "subTitleHome": "Desenvolvedor Web",
   "resume": "https://drive.google.com/file/d/1",
   "textHome": "Sou um desenvolvedor  Front-End, desenvolvo sites para empresas, professores, e pesquisadores, transformando ideias em soluções digitais que captam a atenção e entregam valor.",
-  "cv": "https://github.com/josevanderleineto.png"
+  "cv": "Currículo"
 
 }
