Adicinado vareaveis css

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,7 +6,7 @@
   "titleHome": "Vanderlei Neto",
   "subTitleHome": "Web Developer",
   "resume": "https://drive.google.com/file/d/1",
-  "textHome": "I'm a Front-End developer, creating websites for businesses, teachers, and researchers, transforming ideas into digital solutions that capture attention and deliver value.",
+  "textHome": "I'm a web developer creating websites for businesses and individuals. I transform ideas into digital solutions that grab attention and provide value.",
   "cv": "Resume"
 
 
