--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -6,7 +6,7 @@
   "titleHome": "Vanderlei Neto",
   "subTitleHome": "Desenvolvedor Web",
   "resume": "https://drive.google.com/file/d/1",
-  "textHome": "Sou um desenvolvedor  Front-End, desenvolvo sites para empresas, professores, e pesquisadores, transformando ideias em soluções digitais que captam a atenção e entregam valor.",
+  "textHome": "Sou um desenvolvedor web que cria sites para empresas e pessoas. Transformo ideias em soluções digitais que chamam a atenção e entregam valor.",
   "cv": "Currículo"
 
 }
