--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -7,6 +7,11 @@
   "subTitleHome": "Desenvolvedor Web",
   "resume": "https://drive.google.com/file/d/1",
   "textHome": "Sou um desenvolvedor web que cria sites para empresas e pessoas. Transformo ideias em soluções digitais que chamam a atenção e entregam valor.",
-  "cv": "Currículo"
+  "cv": "Currículo",
+
+  "titleAbout": "About Me",
+  "textAbout": "Sou um desenvolvedor  Web com uma paixão por criar experiências digitais envolventes e intuitivas. Com mais de 3 anos de experiência, especializo-me em construir interfaces modernas e responsivas utilizando tecnologias como HTML, CSS, JavaScript, React, e Angular. Além de desenvolver sites para empresas, professores, e pesquisadores, sou dedicado a transformar ideias em soluções digitais que captam a atenção e entregam valor.",
+  "textAbout2": "Com mais de 3 anos de experiência no desenvolvimento web, já tive a oportunidade de colaborar com diversas empresas, professores e pesquisadores, ajudando-os a transformar suas ideias em soluções digitais robustas e funcionais. Um dos meus projetos de destaque é o Gerador de Notação de Autor, onde utilizei a tabela Cutter como base. Atualmente, estou desenvolvendo uma aplicação semelhante usando tabelas PHA com JavaScript, visando otimizar processos e oferecer soluções inovadoras no campo da Biblioteconomia."
+
 
 }
