--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,8 +1,8 @@
 {
-  
   "home": "Home",
   "about": "About",
   "skill": "Skills",
+  "projectsList": "Projects",
   "contact": "Contact",
   "titleHome": "Vanderlei Neto",
   "subTitleHome": "Web Developer",
@@ -10,77 +10,95 @@
   "textHome": "I'm a web developer creating websites for businesses and individuals. I transform ideas into digital solutions that grab attention and provide value.",
   "cv": "Resume",
 
-"titleAbout": "About Me",
-"aboutDetails": [
-  {
-    "textAbout": "I am a Web developer with a passion for creating engaging and intuitive digital experiences. With over 3 years of experience, I specialise in building modern and responsive interfaces using technologies such as HTML, CSS, JavaScript, React, and Angular. In addition to developing websites for businesses, educators, and researchers, I am dedicated to turning ideas into digital solutions that capture attention and deliver value."
-  },
-  {
-    "textAbout": "With over 3 years of experience in web development, I have had the opportunity to collaborate with various companies, educators, and researchers, helping them to transform their ideas into robust and functional digital solutions. One of my standout projects is the Author Notation Generator, where I used the Cutter table as a basis. I am currently developing a similar application using PHA tables with JavaScript, aiming to optimise processes and offer innovative solutions in the field of Library Science."
-  }
-],
-
-"subTitle": "Serviços",
-"services": [
-  {
-    "title": "Web Development",
-    "text": "I create modern and responsive websites using technologies such as HTML, CSS, JavaScript, React, and Angular."
-  },
-  {
-    "title": "Web Design",
-    "text": "I design engaging and intuitive interfaces that capture attention and deliver value."
-  },
-  {
-    "title": "Consulting",
-    "text": "I provide expert advice on web development and design, helping you to achieve your digital goals."
-  }
-],
-
-"textHbilidades": {
-  "text1": "Tenho uma habilidade natural para resolver problemas de maneira eficiente e prática. Seja um desafio técnico ou uma situação de conflito, mantenho a calma e foco em encontrar a melhor solução possível.",
-  "text2": "Eu também possuo experiência em desenvolvimento de software, com algumas experiências com frameworks e bibliotecas como React, Angular, e Node.js.",
-  "text3": "Minha capacidade de aprendizagem e adaptabilidade são extremamente importantes para o meu trabalho. Eu sempre busco novos conhecimentos e técnicas para melhorar minhas habilidades.",
-  "text4": "Eu também possuo uma boa capacidade de comunicação e escrever código limpo e fácil de entender."
-
-},
-
-"skills": {
-  "title": "Skills",
-  "items": [
+  "titleAbout": "About Me",
+  "aboutDetails": [
     {
-      "tech": "HTML5"
+      "textAbout": "I am a web developer with a passion for creating engaging and intuitive digital experiences. With over 3 years of experience, I specialise in building modern and responsive interfaces using technologies such as HTML, CSS, JavaScript, React, and Angular. In addition to developing websites for businesses, educators, and researchers, I am dedicated to turning ideas into digital solutions that capture attention and deliver value."
     },
     {
-      "tech": "CSS3"
-    },
-    {
-      "tech": "JavaScript"
-    },
-    {
-      "tech": "React"
-    },
-    {
-      "tech": "Angular"
-    },
-    {
-      "tech": "Node.js"
-    },
-    {
-      "tech": "MongoDB"
+      "textAbout": "With over 3 years of experience in web development, I have had the opportunity to collaborate with various companies, educators, and researchers, helping them to transform their ideas into robust and functional digital solutions. One of my standout projects is the Author Notation Generator, where I used the Cutter table as a basis. I am currently developing a similar application using PHA tables with JavaScript, aiming to optimise processes and offer innovative solutions in the field of Library Science."
     }
-  ]
+  ],
 
+  "subTitle": "Services",
+  "services": [
+    {
+      "title": "Web Development",
+      "text": "I create modern and responsive websites using technologies such as HTML, CSS, JavaScript, React, and Angular."
+    },
+    {
+      "title": "Web Design",
+      "text": "I design engaging and intuitive interfaces that capture attention and deliver value."
+    },
+    {
+      "title": "Consulting",
+      "text": "I provide expert advice on web development and design, helping you to achieve your digital goals."
+    }
+  ],
 
-  
-},
+  "textHbilidades": {
+    "text1": "I have a natural ability to solve problems efficiently and practically.",
+    "text2": "I have experience in software development, with frameworks and libraries.",
+    "text3": "I always seek new knowledge and techniques to improve my skills.",
+    "text4": "I also possess good communication skills and write clean, easy-to-understand code."
+  },
 
-"experience": {
-  "title": "Experience",
-  "text": "Com mais de 3 anos de experiência em desenvolvimento web, trabalhando com diversos clientes e projetos."
-},
-"education": {
-  "title": "Education",
-  "text": "Sou formado em Ciência da Computação pela Universidade de São Paulo, com especialização em desenvolvimento e design web."
-}
+  "skills": {
+    "title": "Skills",
+    "tech": "Technologies",
+    "items": [
+      {
+        "tech": "HTML5"
+      },
+      {
+        "tech": "CSS3"
+      },
+      {
+        "tech": "JavaScript"
+      },
+      {
+        "tech": "React"
+      },
+      {
+        "tech": "Angular"
+      },
+      {
+        "tech": "Node.js"
+      },
+      {
+        "tech": "MongoDB"
+      }
+    ]
+  },
 
+  "experience": {
+    "title": "Experience",
+    "text": "With over 3 years of experience in web development, working with various clients and projects."
+  },
+  "education": {
+    "title": "Education",
+    "text": "I have a degree in Computer Science from the University of São Paulo, specialising in web development and design."
+  },
+
+  "projects": {
+    "title": "My Projects",
+    "projeto1": {
+      "title": "Project 1",
+      "description": "Description of project 1"
+    },
+    "projeto2": {
+      "title": "Project 2",
+      "description": "Description of project 2"
+    },
+    "viewSite": "View Site",
+    "viewCode": "View Code"
+  },
+
+  "footer": {
+    "title": "Contact",
+    "text1": "Email: vanderlei.neto@gmail.com",
+    "text2": "Phone: +55 11 99999-9999",
+    "text3": "Address: Rua dos Bobos, 123, São Paulo - SP, 00000-000",
+    "text": "© 2021 Vanderlei Neto. All rights reserved."
+  }
 }
