--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -1,21 +1,22 @@
 {
   "home": "Início",
   "about": "Sobre",
-  "skill": "Skills",
+  "skill": "Habilidades",
+  "projectsList": "Projetos",
   "contact": "Contato",
   "titleHome": "Vanderlei Neto",
   "subTitleHome": "Desenvolvedor Web",
   "resume": "https://drive.google.com/file/d/1",
-  "textHome": "Sou um desenvolvedor web criando sites para empresas e indivíduos. Transformo ideias em soluções digitais que chamam a atenção e proporcionam valor.",
+  "textHome": "Sou um desenvolvedor web criando sites para empresas e indivíduos. Transformo ideias em soluções digitais que chamam a atenção e agregam valor.",
   "cv": "Currículo",
 
   "titleAbout": "Sobre Mim",
   "aboutDetails": [
     {
-      "textAbout": "Sou um desenvolvedor web apaixonado por criar experiências digitais envolventes e intuitivas. Com mais de 3 anos de experiência, sou especializado em construir interfaces modernas e responsivas utilizando tecnologias como HTML, CSS, JavaScript, React e Angular. Além de desenvolver sites para empresas, educadores e pesquisadores, sou dedicado a transformar ideias em soluções digitais que capturam atenção e entregam valor."
+      "textAbout": "Sou um desenvolvedor web com paixão por criar experiências digitais envolventes e intuitivas. Com mais de 3 anos de experiência, me especializo em construir interfaces modernas e responsivas usando tecnologias como HTML, CSS, JavaScript, React e Angular. Além de desenvolver sites para empresas, educadores e pesquisadores, sou dedicado a transformar ideias em soluções digitais que chamam a atenção e entregam valor."
     },
     {
-      "textAbout": "Com mais de 3 anos de experiência em desenvolvimento web, tive a oportunidade de colaborar com diversas empresas, educadores e pesquisadores, ajudando-os a transformar suas ideias em soluções digitais robustas e funcionais. Um dos meus projetos de destaque é o Gerador de Notação de Autor, onde usei a tabela Cutter como base. Atualmente, estou desenvolvendo uma aplicação semelhante utilizando tabelas PHA com JavaScript, visando otimizar processos e oferecer soluções inovadoras no campo da Biblioteconomia."
+      "textAbout": "Com mais de 3 anos de experiência em desenvolvimento web, tive a oportunidade de colaborar com diversas empresas, educadores e pesquisadores, ajudando-os a transformar suas ideias em soluções digitais robustas e funcionais. Um dos meus projetos de destaque é o Gerador de Notação de Autor, onde utilizei a tabela Cutter como base. Atualmente, estou desenvolvendo uma aplicação semelhante usando tabelas PHA com JavaScript, com o objetivo de otimizar processos e oferecer soluções inovadoras na área de Biblioteconomia."
     }
   ],
 
@@ -23,81 +24,81 @@
   "services": [
     {
       "title": "Desenvolvimento Web",
-      "text": "Crio sites modernos e responsivos utilizando tecnologias como HTML, CSS, JavaScript, React e Angular."
+      "text": "Crio sites modernos e responsivos usando tecnologias como HTML, CSS, JavaScript, React e Angular."
     },
     {
       "title": "Design de Sites",
-      "text": "Crio interfaces envolventes e intuitivas que chamam a atenção e proporcionam valor."
+      "text": "Crio interfaces envolventes e intuitivas que chamam a atenção e entregam valor."
     },
     {
       "title": "Consultoria",
-      "text": "Ofereço consultoria especializada em desenvolvimento e design de sites, ajudando você a atingir seus objetivos digitais."
-    },
-
-    
-
-    {
-      "titleSkills": "Habilidades",
-      "skills": [
-        {
-          "text": "Tenho uma sólida base em desenvolvimento web e design."
-        },
-        {
-          "text": "Especializado em tecnologias como HTML, CSS, JavaScript, React e Angular."
-        }
-      ],
-      "titleExperience": "Experiência",
-      "experience": "Tenho mais de 3 anos de experiência em desenvolvimento web, trabalhando com diversos clientes e projetos.",
-      "titleEducation": "Educação",
-      "education": "Sou formado em Ciência da Computação pela Universidade de São Paulo, com especialização em desenvolvimento e design web."
+      "text": "Ofereço consultoria especializada em desenvolvimento e design de sites, ajudando você a alcançar seus objetivos digitais."
     }
-    
   ],
-"textHbilidades": {
-  "text1": "Tenho uma habilidade natural para resolver problemas de maneira eficiente e prática. Seja um desafio técnico ou uma situação de conflito, mantenho a calma e foco em encontrar a melhor solução possível.",
-  "text2": "Eu também possuo experiência em desenvolvimento de software, com algumas experiências com frameworks e bibliotecas como React, Angular, e Node.js.",
-  "text3": "Minha capacidade de aprendizagem e adaptabilidade são extremamente importantes para o meu trabalho. Eu sempre busco novos conhecimentos e técnicas para melhorar minhas habilidades.",
-  "text4": "Eu também possuo uma boa capacidade de comunicação e escrever código limpo e fácil de entender."
 
-},
+  "textHbilidades": {
+    "text1": "Tenho uma habilidade natural para resolver problemas de maneira eficiente e prática.",
+    "text2": "Possuo experiência em desenvolvimento de software, com frameworks e bibliotecas.",
+    "text3": "Estou sempre em busca de novos conhecimentos e técnicas para aprimorar minhas habilidades.",
+    "text4": "Também possuo boa comunicação e sou capaz de escrever código limpo e fácil de entender."
+  },
 
-"skills": {
-  "title": "Skills",
-  "items": [
-    {
-      "tech": "HTML5"
-    },
-    {
-      "tech": "CSS3"
-    },
-    {
-      "tech": "JavaScript"
-    },
-    {
-      "tech": "React"
-    },
-    {
-      "tech": "Angular"
-    },
-    {
-      "tech": "Node.js"
-    },
-    {
-      "tech": "MongoDB"
-    }
-  ]
-},
+  "skills": {
+    "title": "Habilidades",
+    "tech": "Tecnologias",
+    "items": [
+      {
+        "tech": "HTML5"
+      },
+      {
+        "tech": "CSS3"
+      },
+      {
+        "tech": "JavaScript"
+      },
+      {
+        "tech": "React"
+      },
+      {
+        "tech": "Angular"
+      },
+      {
+        "tech": "Node.js"
+      },
+      {
+        "tech": "MongoDB"
+      }
+    ]
+  },
 
-"experience": {
-  "title": "Experience",
-  "text": "Com mais de 3 anos de experiência em desenvolvimento web, trabalhando com diversos clientes e projetos."
-},
-"education": {
-  "title": "Education",
-  "text": "Sou formado em Ciência da Computação pela Universidade de São Paulo, com especialização em desenvolvimento e design web."
-}
+  "experience": {
+    "title": "Experiência",
+    "text": "Com mais de 3 anos de experiência em desenvolvimento web, trabalhando com diversos clientes e projetos."
+  },
+  "education": {
+    "title": "Formação",
+    "text": "Sou formado em Ciência da Computação pela Universidade de São Paulo, com especialização em desenvolvimento e design web."
+  },
 
+  "projects": {
+    "title": "Meus Projetos",
+    "projeto1": {
+      "title": "Projeto 1",
+      "description": "Descrição do projeto 1"
+    },
+    "projeto2": {
+      "title": "Projeto 2",
+      "description": "Descrição do projeto 2"
+    },
+    "viewSite": "Ver Site",
+    "viewCode": "Ver Código"
+  },
 
-
- 
+  "footer": {
+    "title": "Contato",
+    "text1": "Email: vanderlei.neto@gmail.com",
+    "text2": "Telefone: +55 11 99999-9999",
+    "text3": "Endereço: Rua dos Bobos, 123, São Paulo - SP, 00000-000",
+    "text": "© 2021 Vanderlei Neto. Todos os direitos reservados."
+  }
 }
