--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -96,9 +96,9 @@
 
   "footer": {
     "title": "Contact",
-    "text1": "Email: vanderlei.neto@gmail.com",
-    "text2": "Phone: +55 11 99999-9999",
-    "text3": "Address: Rua dos Bobos, 123, São Paulo - SP, 00000-000",
+    "text1": "Email: jose.vanderlei.nn@gmail.com",
+    "text2": "Phone: +55 71 98449-8113",
+    "text3": "Salvador - Bahia, Brazil",
     "text": "© 2021 Vanderlei Neto. All rights reserved."
   }
 }
