--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -96,9 +96,9 @@
 
   "footer": {
     "title": "Contato",
-    "text1": "Email: vanderlei.neto@gmail.com",
-    "text2": "Telefone: +55 11 99999-9999",
-    "text3": "Endereço: Rua dos Bobos, 123, São Paulo - SP, 00000-000",
+    "text1": "Email: vanderlei.nn@gmail.com",
+    "text2": "Telefone: +55 71 98449-8113",
+    "text3": "Salvador - Bahia, Brasil",
     "text": "© 2021 Vanderlei Neto. Todos os direitos reservados."
   }
 }
