--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -112,7 +112,7 @@
 
   "footer": {
     "title": "Contact",
-    "text1": "Email: jose.vanderlei.nn@gmail.com",
+    "text1": "Email: jv.neto@ouylook.com.br",
     "text2": "Phone: +55 71 98449-8113",
     "text3": "Salvador - Bahia, Brazil",
     "text": "© 2024 By Vanderlei Neto. All rights reserved."
