--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -107,7 +107,7 @@
   
 
   "footer": {
-    "text1": "Email: vanderlei.nn@gmail.com",
+    "text1": "Email: jv.neto@outlook.com.br",
     "text2": "Telefone: +55 71 98449-8113",
     "text3": "Salvador - Bahia, Brasil",
     "text": "© 2024 Feito por  Vanderlei Neto. Todos os direitos reservados."
