--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,7 +6,7 @@
   "contact": "Contact",
   "titleHome": "Vanderlei Neto",
   "subTitleHome": "Web Developer",
-  "resume": "https://drive.google.com/file/d/1",
+  "resume": "/CV_Vanderlei_Neto_Front_End.pdf",
   "textHome": "I'm a web developer creating websites for businesses and individuals. I transform ideas into digital solutions that grab attention and provide value.",
   "cv": "Resume",
 
