--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -6,7 +6,7 @@
   "contact": "Contato",
   "titleHome": "Vanderlei Neto",
   "subTitleHome": "Desenvolvedor Web",
-  "resume": "https://drive.google.com/file/d/1",
+  "resume": "/CV_Vanderlei_Neto_Front_End.pdf",
   "textHome": "Sou um desenvolvedor web criando sites para empresas e indivíduos. Transformo ideias em soluções digitais que chamam a atenção e agregam valor.",
   "cv": "Currículo",
 
